<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp">
        <ImageView
                android:layout_width="150dp"
                android:layout_height="230dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/img_poster_detail"
                android:layout_weight="1"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="20"
                android:paddingTop="16dp"
                android:layout_marginLeft="8dp">
            <TextView
                    android:text="Infinity War"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title_detail"
                    android:textSize="30sp"
            />
            <TextView
                    android:text="@string/user_score"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tv_score_title"/>
            <TextView
                    android:text="75%"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tv_score_value_detail"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@string/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv_release_date_title_detail"/>
            <TextView
                    android:text="10 January 2019"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tv_release_date_detail"
                    android:textSize="18sp"/>
            <TextView
                    android:text="@string/top_cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv_top_cast_title_detail"/>
            <TextView
                    android:text="Robert Downey Jr., Chris Evans, Chris Hemsworth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_top_cast_detail"
                    android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_header"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_description_title_detail"
                android:text="@string/description"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:text="@string/lorem"
                  android:textSize="18sp"
                  android:id="@+id/tv_description_detail"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>